web build shipped 🌐

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | High Speed</title>
+    <title>Unity WebGL Player | Velocity</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">High Speed</div>
+        <div id="unity-build-title">Velocity</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Velocity Web.loader.js";
+      var loaderUrl = buildUrl + "/Velocity Web Final Files.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Velocity Web.data",
-        frameworkUrl: buildUrl + "/Velocity Web.framework.js",
-        codeUrl: buildUrl + "/Velocity Web.wasm",
+        dataUrl: buildUrl + "/Velocity Web Final Files.data",
+        frameworkUrl: buildUrl + "/Velocity Web Final Files.framework.js",
+        codeUrl: buildUrl + "/Velocity Web Final Files.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Szulc_Danielski_Soroczyński",
-        productName: "High Speed",
+        companyName: "Dhruv Badaya",
+        productName: "Velocity",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
